public class PlayerAnimationString
{
    internal static string OnGrounded = "OnGrounded";
    internal static string IsWalking = "IsWalking";
    internal static string TriggerDash = "TriggerDash";
    internal static string CanChangeDirection = "CanChangeDirection";
    internal static string CanMove = "CanMove";
    // internal static string
    // internal static string
    // internal static string
    // internal static string
    // internal static string
    // internal static string
    // internal static string
    // internal static string
    // internal static string
    // internal static string
    // internal static string
    // internal static string
    // internal static string
    // internal static string
    // internal static string
    // internal static string
    // internal static string
    // internal static string
    // internal static string
}

